<resources>
    <string name="app_name">Werkout</string>


    <string name="hello_first_fragment">Hello World!</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="prev">Prev</string>
    <string name="home">Home</string>
    <string name="greeting">Hey, Ashley!</string>
    <string name="choose_workout">Choose Today\'s Workout:</string>

    <string name="back">&lt; Back</string>
    <string name="upper_body">Upper Body</string>
    <string name="lower_body">Lower Body</string>
    <string name="core">Core</string>
    <string name="full_body">Full Body</string>
    <string name="encouragement">Great choice, Ashley!</string>
    <string name="workout_details">Here\'s what you\'ve got up ahead:</string>
    <string name = "start_workout">Start Workout</string>


    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="woman_crunching_yoga">woman crunching yoga</string>
    <string name="woman_lunging">woman lunging</string>
    <string name="woman_side_lunging">woman side lunging</string>
    <string name="woman_doing_bicep_curls">woman doing bicep curls</string>
    <string name="woman_crunching">woman crunching</string>
    <string name="woman_benching">woman benching</string>
</resources>