<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9FFF9"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/workout_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:layout_marginBottom="572dp"
        android:text="@string/workout_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView_first2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textColor="#D64045"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/button_second"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="323dp"
        android:layout_marginRight="323dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/encouragement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/encouragement"
        android:textColor="#1D3354"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="340dp"
        android:layout_height="293dp"
        android:layout_marginTop="159dp"
        android:contentDescription="@string/woman_crunching_yoga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="161dp"
        android:layout_height="122dp"
        android:layout_marginTop="363dp"
        android:contentDescription="@string/woman_crunching"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upperbody" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="187dp"
        android:layout_height="186dp"
        android:layout_marginTop="452dp"
        android:contentDescription="@string/woman_doing_bicep_curls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="230dp"
        android:layout_height="166dp"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="171dp"
        android:contentDescription="@string/woman_benching"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chest" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="171dp"
        android:layout_height="110dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="327dp"
        android:contentDescription="@string/woman_lunging"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/legs" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="276dp"
        android:layout_height="309dp"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="363dp"
        android:contentDescription="@string/woman_side_lunging"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calf" />

    <Button
        android:id="@+id/start_workout_button"
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="519dp"
        android:background="#D64045"
        android:text="@string/start_workout"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workout_move2"
        android:layout_width="341dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="219dp"
        android:layout_marginBottom="22dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="WORKOUTMOVE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/workout_move3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/workout_move3"
        android:layout_width="341dp"
        android:layout_height="36dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="22dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="WORKOUTMOVE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/workout_move4"
        app:layout_constraintEnd_toEndOf="@+id/workout_move2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/workout_move7"
        android:layout_width="341dp"
        android:layout_height="36dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="22dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="WORKOUTMOVE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/workout_move"
        app:layout_constraintEnd_toEndOf="@+id/workout_move4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/workout_move"
        android:layout_width="341dp"
        android:layout_height="36dp"
        android:layout_marginTop="452dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="WORKOUTMOVE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/workout_move7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workout_move4"
        android:layout_width="341dp"
        android:layout_height="36dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="22dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="WORKOUTMOVE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/workout_move7"
        app:layout_constraintEnd_toEndOf="@+id/workout_move3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>